# kubrux

./: .gitignore  Makefile  distributed.scene  kubrux.py  lab2a.scene  lab2a.script  lab2b.scene  lab2c.scene  lab3a.scene  lab3b.scene  lab3c.scene  lab3d.scene  pyproject.toml  relay.scene  simple.scene  tcp_handshake.scene  udp_datagrams.scene
completions/: _kubrux  kubrux.bash
docs/: API.md  CONTRIBUTING.md  EXAMPLES.md  GITHUB.md  INSTALLATION.md  QUICK_START.md  README.md  SCENE_FORMAT.md
